--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="logo/favicon.ico" sizes="any"/>
+    <link rel="icon" href="logo/logo192.png" sizes="192x192"/>
+    <link rel="icon" href="logo/logo512.png" sizes="512x512"/>
+    <link rel="apple-touch-icon" href="logo/logo192.png" sizes="192x192">
     <title>GUINNESS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,21 +19,21 @@
 
     <!-- 내비게이션 영역 -->
     <nav class="global_nav">
-        <div class="global_nav_links">
-            <a href="#" class="global_nav_link">HOME</a>
-            <a href="#" class="global_nav_link">HISTORY</a>
-            <a href="#" class="global_nav_link">STORE</a>
-            <a href="#" class="global_nav_link">CONTACT</a>
-        </div>
+        <ul class="global_nav_links">
+            <li class="global_nav_link">HOME</li>
+            <li class="global_nav_link">HISTORY</li>
+            <li class="global_nav_link">STORE</li>
+            <li class="global_nav_link">CONTACT</li>
+        </ul>
     </nav>
 
     <nav class="local_nav">
-        <div class="local_nav_links">
-            <a href="#" class="local_nav_product_link">GUINNESS</a>
-            <a href="#" class="local_nav_link">WELCOME</a>
-            <a href="#" class="local_nav_link">HOW TO ENJOY</a>
-            <a href="#" class="local_nav_link">EVENT</a>
-        </div>
+        <ul class="local_nav_links">
+            <li class="local_nav_product_link">GUINNESS</li>
+            <li class="local_nav_link">WELCOME</li>
+            <li class="local_nav_link">HOW TO ENJOY</li>
+            <li class="local_nav_link">EVENT</li>
+        </ul>
     </nav>
 
     <!-- 스크롤 버튼 -->
@@ -46,9 +50,10 @@
 
         <div class="sec0_txt">
             <h1 class="sec0_txt_title">
-                <div>PERFECT GUINNESS</div>
-                <div>PERFECT GUINNESS</div>
-                <div>PERFECT GUINNESS</div>
+              <div class="marquee_area">
+                <div class="marquee_text">PERFECT GUINNESS</div>
+                <div class="marquee_text">PERFECT GUINNESS</div>
+              </div>
             </h1>
             <p class="sec0_txt_subtitle_left">WHAT MAKES GUINNESS<br>SO PERFECT?</p>
             <p class="sec0_txt_subtitle_right">기네스를 완벽하게 즐기는<br>네가지 방법</p>
@@ -64,8 +69,8 @@
         <div class="sticky_element sec1_msg b"><p>260년의 헤리티지</p></div>
         <div class="sticky_element sec1_msg c"><p>119.5초의 미학</p></div>
         <div class="sticky_element sec1_msg d"><p>글로벌 흑맥주 1위</p></div>
-        <div class="sticky_element sec1_msg e"><p><img src="./image/logo_txt_black.png" alt="GUINNESS"></p></div>
-        <div class="sticky_element sec1_img"><img src="./image/intro/org/5_pint.jpeg" alt=""></div>
+        <div class="sticky_element sec1_msg e"><p><img src="./image/logo_txt_black.png" alt="GUINNESS Logo"></p></div>
+        <div class="sticky_element sec1_img"><img src="./image/intro/org/5_pint.jpeg" alt="GUINNESS Image"></div>
     </section>
 
 
